Migrate all configs to v8

--- a/config/biomes/PleasantHills.json
+++ b/config/biomes/PleasantHills.json
@@ -7,7 +7,7 @@
    "@toggle-test" : false,
    "@toggle-world" : true,
    "@unlinked" : [],
-   "@version" : 7,
+   "@version" : 8,
    "biome" : {
       "fun" : {
          "@collapsed" : false,
@@ -968,6 +968,8 @@
                                  "bias" : 0.69999998807907104,
                                  "blockType" : "WOOD_EXOTIC_LEAVES",
                                  "height" : 6.9000000953674316,
+                                 "maxScale" : 1.25,
+                                 "minScale" : 0.17000000178813934,
                                  "radius" : 3.4000000953674316,
                                  "stemType" : "WOOD_TWISTED_TRUNK",
                                  "taper" : 0.40000000596046448,
@@ -975,10 +977,10 @@
                                  "type" : "basicTree"
                               },
                               "maxGradient" : 6,
-                              "maxSize" : 1.25,
+                              "maxSize" : 1,
                               "maxY" : 256,
                               "minGradient" : 0,
-                              "minSize" : 0.17000000178813934,
+                              "minSize" : 0,
                               "minY" : 0,
                               "noise" : {
                                  "@collapsed" : false,
@@ -1025,6 +1027,8 @@
                                  "bias" : 0.30000001192092896,
                                  "blockType" : "WOOD_WAXY_LEAVES",
                                  "height" : 3.7999999523162842,
+                                 "maxScale" : 1.25,
+                                 "minScale" : 1,
                                  "radius" : 4.5999999046325684,
                                  "stemType" : "WOOD_ANCIENT_TRUNK",
                                  "taper" : 0.30000001192092896,
@@ -1032,10 +1036,10 @@
                                  "type" : "basicTree"
                               },
                               "maxGradient" : 6,
-                              "maxSize" : 1.25,
+                              "maxSize" : 1,
                               "maxY" : 256,
                               "minGradient" : 0,
-                              "minSize" : 1,
+                              "minSize" : 0,
                               "minY" : 100,
                               "noise" : {
                                  "@collapsed" : false,
@@ -2506,16 +2510,18 @@
                                  "@position" : [ 10497, 13648 ],
                                  "blockType" : "WOOD_LUSH_LEAVES",
                                  "height" : 3,
+                                 "maxScale" : 1.5,
+                                 "minScale" : 1,
                                  "radius" : 3,
                                  "stemType" : "WOOD_LUSTROUS_TRUNK",
                                  "taper" : 1,
                                  "type" : "bush"
                               },
                               "maxGradient" : 6,
-                              "maxSize" : 1.5,
+                              "maxSize" : 1,
                               "maxY" : 256,
                               "minGradient" : 0,
-                              "minSize" : 1,
+                              "minSize" : 0,
                               "minY" : 0,
                               "noise" : {
                                  "@collapsed" : false,
@@ -2550,16 +2556,18 @@
                                  "@position" : [ 10497, 13819 ],
                                  "blockType" : "THORNS_DEFAULT_BASE",
                                  "height" : 3,
+                                 "maxScale" : 1.3700000047683716,
+                                 "minScale" : 0.74000000953674316,
                                  "radius" : 3,
                                  "stemType" : "WOOD_TWISTED_TRUNK",
                                  "taper" : 1,
                                  "type" : "bush"
                               },
                               "maxGradient" : 6,
-                              "maxSize" : 1.3700000047683716,
+                              "maxSize" : 1,
                               "maxY" : 256,
                               "minGradient" : 0,
-                              "minSize" : 0.74000000953674316,
+                              "minSize" : 0,
                               "minY" : 0,
                               "noise" : {
                                  "@collapsed" : false,
@@ -3207,6 +3215,12 @@
       "blockColors" : {
          "ASH_DEFAULT_BASE" : 1,
          "CRYSTAL_GLEAM_BASE" : 13,
+         "FLORA_FLOWER_1" : 1,
+         "FLORA_FLOWER_2" : 1,
+         "FLORA_FLOWER_3" : 1,
+         "FLORA_FLOWER_4" : 1,
+         "FLORA_PLANT_FIBROUS" : 1,
+         "FLORA_PLANT_INKY" : 1,
          "GRASS_BARBED_BASE" : 8,
          "GRASS_GNARLED_BASE" : 7,
          "GRASS_VERDANT_BASE" : 9,
@@ -3244,7 +3258,7 @@
          "@position" : [ 7932, 8160 ],
          "@toggle-test" : false,
          "@toggle-world" : true,
-         "@version" : 7,
+         "@version" : 8,
          "biome" : {
             "fun" : {
                "@collapsed" : false,
@@ -4205,6 +4219,8 @@
                                        "bias" : 0.69999998807907104,
                                        "blockType" : "WOOD_EXOTIC_LEAVES",
                                        "height" : 6.9000000953674316,
+                                       "maxScale" : 1.25,
+                                       "minScale" : 0.17000000178813934,
                                        "radius" : 3.4000000953674316,
                                        "stemType" : "WOOD_TWISTED_TRUNK",
                                        "taper" : 0.40000000596046448,
@@ -4212,10 +4228,10 @@
                                        "type" : "basicTree"
                                     },
                                     "maxGradient" : 6,
-                                    "maxSize" : 1.25,
+                                    "maxSize" : 1,
                                     "maxY" : 256,
                                     "minGradient" : 0,
-                                    "minSize" : 0.17000000178813934,
+                                    "minSize" : 0,
                                     "minY" : 0,
                                     "noise" : {
                                        "@collapsed" : false,
@@ -4262,6 +4278,8 @@
                                        "bias" : 0.30000001192092896,
                                        "blockType" : "WOOD_WAXY_LEAVES",
                                        "height" : 3.7999999523162842,
+                                       "maxScale" : 1.25,
+                                       "minScale" : 1,
                                        "radius" : 4.5999999046325684,
                                        "stemType" : "WOOD_ANCIENT_TRUNK",
                                        "taper" : 0.30000001192092896,
@@ -4269,10 +4287,10 @@
                                        "type" : "basicTree"
                                     },
                                     "maxGradient" : 6,
-                                    "maxSize" : 1.25,
+                                    "maxSize" : 1,
                                     "maxY" : 256,
                                     "minGradient" : 0,
-                                    "minSize" : 1,
+                                    "minSize" : 0,
                                     "minY" : 100,
                                     "noise" : {
                                        "@collapsed" : false,
@@ -5743,16 +5761,18 @@
                                        "@position" : [ 10497, 13648 ],
                                        "blockType" : "WOOD_LUSH_LEAVES",
                                        "height" : 3,
+                                       "maxScale" : 1.5,
+                                       "minScale" : 1,
                                        "radius" : 3,
                                        "stemType" : "WOOD_LUSTROUS_TRUNK",
                                        "taper" : 1,
                                        "type" : "bush"
                                     },
                                     "maxGradient" : 6,
-                                    "maxSize" : 1.5,
+                                    "maxSize" : 1,
                                     "maxY" : 256,
                                     "minGradient" : 0,
-                                    "minSize" : 1,
+                                    "minSize" : 0,
                                     "minY" : 0,
                                     "noise" : {
                                        "@collapsed" : false,
@@ -5787,16 +5807,18 @@
                                        "@position" : [ 10497, 13819 ],
                                        "blockType" : "THORNS_DEFAULT_BASE",
                                        "height" : 3,
+                                       "maxScale" : 1.3700000047683716,
+                                       "minScale" : 0.74000000953674316,
                                        "radius" : 3,
                                        "stemType" : "WOOD_TWISTED_TRUNK",
                                        "taper" : 1,
                                        "type" : "bush"
                                     },
                                     "maxGradient" : 6,
-                                    "maxSize" : 1.3700000047683716,
+                                    "maxSize" : 1,
                                     "maxY" : 256,
                                     "minGradient" : 0,
-                                    "minSize" : 0.74000000953674316,
+                                    "minSize" : 0,
                                     "minY" : 0,
                                     "noise" : {
                                        "@collapsed" : false,
@@ -6444,6 +6466,12 @@
             "blockColors" : {
                "ASH_DEFAULT_BASE" : 1,
                "CRYSTAL_GLEAM_BASE" : 13,
+               "FLORA_FLOWER_1" : 1,
+               "FLORA_FLOWER_2" : 1,
+               "FLORA_FLOWER_3" : 1,
+               "FLORA_FLOWER_4" : 1,
+               "FLORA_PLANT_FIBROUS" : 1,
+               "FLORA_PLANT_INKY" : 1,
                "GRASS_BARBED_BASE" : 8,
                "GRASS_GNARLED_BASE" : 7,
                "GRASS_VERDANT_BASE" : 9,
