--- a/config/biomes/PleasantHills.json
+++ b/config/biomes/PleasantHills.json
@@ -7,14 +7,21 @@
    "@toggle-test" : false,
    "@toggle-world" : true,
    "@unlinked" : [],
-   "@version" : 8,
+   "@version" : 11,
    "biome" : {
       "fun" : {
          "@collapsed" : false,
          "@name" : "Pleasent Hills",
          "@position" : [ 8260, 8171 ],
-         "altitude" : 0.66500002145767212,
-         "humidity" : 0.6390000581741333,
+         "altitude" : {
+            "enabled" : true,
+            "value" : 0.66500002145767212
+         },
+         "humidity" : {
+            "enabled" : true,
+            "value" : 0.6390000581741333
+         },
+         "nameStyle" : "Catena {}",
          "part" : {
             "@collapsed" : false,
             "@name" : "Pleasent Hills",
@@ -3192,8 +3199,14 @@
                "type" : "remap"
             }
          },
-         "temperature" : 0.47700002789497375,
-         "vegetation" : 0.84500002861022949,
+         "temperature" : {
+            "enabled" : true,
+            "value" : 0.47700002789497375
+         },
+         "vegetation" : {
+            "enabled" : true,
+            "value" : 0.84500002861022949
+         },
          "weight" : 1
       },
       "links" : []
@@ -3258,14 +3271,21 @@
          "@position" : [ 7932, 8160 ],
          "@toggle-test" : false,
          "@toggle-world" : true,
-         "@version" : 8,
+         "@version" : 11,
          "biome" : {
             "fun" : {
                "@collapsed" : false,
                "@name" : "Pleasent Hills",
                "@position" : [ 8260, 8171 ],
-               "altitude" : 0.66500002145767212,
-               "humidity" : 0.6390000581741333,
+               "altitude" : {
+                  "enabled" : true,
+                  "value" : 0.66500002145767212
+               },
+               "humidity" : {
+                  "enabled" : true,
+                  "value" : 0.6390000581741333
+               },
+               "nameStyle" : "Catena {}",
                "part" : {
                   "@collapsed" : false,
                   "@name" : "Pleasent Hills",
@@ -6443,8 +6463,14 @@
                      "type" : "remap"
                   }
                },
-               "temperature" : 0.47700002789497375,
-               "vegetation" : 0.84500002861022949,
+               "temperature" : {
+                  "enabled" : true,
+                  "value" : 0.47700002789497375
+               },
+               "vegetation" : {
+                  "enabled" : true,
+                  "value" : 0.84500002861022949
+               },
                "weight" : 1
             },
             "links" : []
