--- a/config/biomes/SnowyHills.json
+++ b/config/biomes/SnowyHills.json
@@ -297,7 +297,7 @@
                                        ],
                                        "offset" : [ 133.54086303710938, -224.30830383300781 ],
                                        "offset-hash" : "SzR5NZDCAAcYe2ef",
-                                       "reference" : "noise2d/Ditches.json",
+                                       "reference" : "noise2d/Heightmaps/Ditches.json",
                                        "tick" : 0,
                                        "type" : "reference"
                                     },
@@ -592,7 +592,7 @@
                                        ],
                                        "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                        "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                       "reference" : "noise2d/Ditches.json",
+                                       "reference" : "noise2d/Heightmaps/Ditches.json",
                                        "tick" : 0,
                                        "type" : "reference"
                                     },
@@ -789,7 +789,7 @@
                                        ],
                                        "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                        "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                       "reference" : "noise2d/Ditches.json",
+                                       "reference" : "noise2d/Heightmaps/Ditches.json",
                                        "tick" : 0,
                                        "type" : "reference"
                                     },
@@ -986,7 +986,7 @@
                                        ],
                                        "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                        "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                       "reference" : "noise2d/Ditches.json",
+                                       "reference" : "noise2d/Heightmaps/Ditches.json",
                                        "tick" : 0,
                                        "type" : "reference"
                                     },
@@ -1687,7 +1687,7 @@
                                              ],
                                              "offset" : [ 133.54086303710938, -224.30830383300781 ],
                                              "offset-hash" : "SzR5NZDCAAcYe2ef",
-                                             "reference" : "noise2d/Ditches.json",
+                                             "reference" : "noise2d/Heightmaps/Ditches.json",
                                              "tick" : 0,
                                              "type" : "reference"
                                           },
@@ -1982,7 +1982,7 @@
                                              ],
                                              "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                              "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                             "reference" : "noise2d/Ditches.json",
+                                             "reference" : "noise2d/Heightmaps/Ditches.json",
                                              "tick" : 0,
                                              "type" : "reference"
                                           },
@@ -2179,7 +2179,7 @@
                                              ],
                                              "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                              "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                             "reference" : "noise2d/Ditches.json",
+                                             "reference" : "noise2d/Heightmaps/Ditches.json",
                                              "tick" : 0,
                                              "type" : "reference"
                                           },
@@ -2376,7 +2376,7 @@
                                              ],
                                              "offset" : [ -103.05943298339844, 61.666439056396484 ],
                                              "offset-hash" : "Kd4RC7kMUiKmP39d",
-                                             "reference" : "noise2d/Ditches.json",
+                                             "reference" : "noise2d/Heightmaps/Ditches.json",
                                              "tick" : 0,
                                              "type" : "reference"
                                           },
